# Vireon

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  heaptrack.executable.29771.zst  heaptrack.executable.49683.zst  heaptrack.executable.50263.zst  logs.txt  map.json  vireon.hpp
.cache/clangd/index/: GLFWwindow.cpp.6382163B28FA26B4.idx  GLFWwindow.cpp.741D1462A468AF73.idx  GLFWwindow.cpp.F7887BFA1A0791C4.idx  GLFWwindow.hpp.4A95C986AAC7AC07.idx  GLFWwindow.hpp.C30724B09FA3AA07.idx  GLFWwindow.hpp.EBEF676FB5217241.idx  batch.hpp.10B48722B2C5443B.idx  batch.hpp.3B7861B302076B53.idx  batch.hpp.6F680EB1149C2CE2.idx  batchManager.cpp.3422624935E2616B.idx  batchManager.cpp.572053D788C0E168.idx  batchManager.hpp.023A388C59FAB681.idx  batchManager.hpp.BB37C4D2A2B245DC.idx  clock.hpp.C6397A55F637777A.idx  components.hpp.712D8EDFCAA6278A.idx  components.hpp.A538335905A87A50.idx  elementBuffer.cpp.0630B4DBE9BF690A.idx  elementBuffer.cpp.4EC2085A7E591DE6.idx  elementBuffer.cpp.AC016E4D1DC552F6.idx  elementBuffer.hpp.4012503170B37F55.idx  elementBuffer.hpp.4965ABDDA945E2A2.idx  elementBuffer.hpp.537CA2F2722FDF57.idx  engine.cpp.270F838B216284AF.idx  engine.cpp.80EA51B50FA42E9B.idx  engine.hpp.4875F4CFB18EA7A2.idx  engine.hpp.E7F2B51C51BD2AA9.idx  entity.hpp.B1E5D18A4707A7AF.idx  entity.hpp.F567644912FC6250.idx  entityManager.cpp.81A23D51F46FBFD5.idx  entityManager.cpp.BF05C1A8406A9575.idx  entityManager.hpp.302B275D9258E6E1.idx  entityManager.hpp.F635034F9823B638.idx  fileIO.cpp.051B80A057E67ECE.idx  fileIO.cpp.256C5F88FF0B03FA.idx  fileIO.cpp.B2680F46F6D077AA.idx  fileIO.hpp.551F00462CA31B8F.idx  fileIO.hpp.6747004353D11130.idx  fileIO.hpp.E576D05A410232B7.idx  game.hpp.6180488329643B4A.idx  gl.c.1F4476683135B541.idx  (+86 more)
api/: vireon.hpp
include/glad/: gl.h
shaders/: simple.frag  simple.vert
shaders/light/: shader.frag  shader.vert
shaders/secondPass/: shader.frag
shaders/simple/: shader.frag  shader.vert
shaders/text/: shader.frag  shader.vert
shaders/textured/: shader.frag  shader.vert
src/: bouncingBalls.example  main.cpp  main.old  main.old3  main.old4  mapMaker.cpp
src/core/file/: fileIO.cpp  fileIO.hpp
src/core/hasher64/: hasher64.hpp
src/core/idManager/: idManager.hpp
src/engine/: engine.cpp  engine.hpp
src/engine/audioManager/: audioManager.cpp  audioManager.hpp
src/engine/entityManager/: entityManager.cpp  entityManager.hpp
src/engine/entityManager/ComponentManager/: componentManager.hpp
src/engine/entityManager/ComponentManager/componentAllocator/: componentAllocator.hpp
src/engine/entityManager/component/: components.hpp
src/engine/entityManager/entity/: entity.hpp
src/engine/entityManager/entity/component/: components.hpp
src/engine/eventManager/: eventManager.hpp
src/engine/glyphManager/: glyphManager.cpp  glyphManager.hpp
src/engine/glyphManager/glyphMap/: glyphMap.cpp  glyphMap.hpp
src/engine/graphics/batch/: batch.cpp  batch.hpp
src/engine/graphics/batch/rect/: rect.hpp
src/engine/graphics/batchManager/: batchManager.cpp  batchManager.hpp
src/engine/graphics/batchManager/batch/: batch.cpp  batch.hpp
src/engine/graphics/elementBuffer/: elementBuffer.cpp  elementBuffer.hpp
src/engine/graphics/gpuBuffers/: gpuBuffers.cpp  gpuBuffers.hpp
src/engine/graphics/gpuBuffers/elementBuffer/: elementBuffer.cpp  elementBuffer.hpp
src/engine/graphics/object/: object.hpp
src/engine/graphics/renderer/: renderer.cpp  renderer.hpp
src/engine/graphics/shader/: shader.cpp  shader.hpp
src/engine/graphics/shaderManager/: shaderManager.cpp  shaderManager.hpp
src/engine/graphics/texture/: texture.cpp  texture.hpp
src/engine/graphics/vertex/: vertex.cpp  vertex.hpp
src/engine/graphics/vertexArray/: vertexArray.cpp  vertexArray.hpp
src/engine/graphics/vertexBuffer/: vertexBuffer.cpp  vertexBuffer.hpp
src/engine/graphics/vertexLayout/: vertexLayout.cpp  vertexLayout.hpp
src/engine/materialManager/: materialManager.hpp
src/engine/materialManager/material/: material.cpp  material.hpp
src/engine/meshManager/: \  meshManager.cpp  meshManager.hpp
src/engine/meshManager/mesh/: mesh.hpp
src/engine/scene/: scene.hpp
src/engine/scene/entity/: entity.hpp
src/engine/sceneManager/: sceneManager.cpp  sceneManager.hpp
src/engine/sceneManager/scene/: scene.hpp
src/engine/scheduleManager/: scheduleManager.cpp  scheduleManager.hpp
src/engine/scheduleManager/task/: task.hpp
src/game/: game.cpp  game.hpp
src/platform/input/: inputHandler.cpp  inputHandler.hpp
src/platform/window/: GLFWwindow.cpp  GLFWwindow.hpp
src/utils/: types.hpp
src/utils/allocator/: allocator.hpp
src/utils/clock/: clock.hpp
src/utils/file/: fileIO.cpp  fileIO.hpp
src/utils/hasher64/: hasher64.hpp
src/utils/logger/: logger.cpp  logger.hpp
src/utils/objectPool/: objectPool.hpp
src/utils/spatialMap/: spatialMap.cpp  spatialMap.hpp
(+11 files in other folders)
